# 8xtract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: extraction.rs  lib.rs  ocr.rs
examples/: README.md
