[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/config",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["8b-is"]
license = "Apache-2.0"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"

# Internal dependencies
xtract-core = { path = "./crates/core" }
xtract-config = { path = "./crates/config" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
